# lassen

./: CMakeLists.txt  README.md
data/test/ecoli_200_50bp_windows/: gi_14451_14500.fasta  gi_14451_14500_ref.fasta
inc/: FastaReader.h  FastqReader.h  FileManager.h  callConsensusCpp.h  split.h
src/: FastaReader.cpp  FastqReader.cpp  callConsensusCpp.cpp  parse_fasta_windows.cpp  parse_grouped_amplicons.cpp  py_module.cpp  split.cpp  stupid_test.cpp
src/test/: test.fastq  test_FastaReader.cpp  test_consensus.cpp  test_split.cpp
